crates/mir/filetests/tests/invalid_programs/unterminated_block.mir
// @harness parser_roundtrip
// @harness cfg_integrity_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0)))